made padding relative and adaptable to changing font sizes / no-wrap fix

--- a/source/less/logo.less
+++ b/source/less/logo.less
@@ -35,16 +35,17 @@
 }
 
 .logo-mark {
-  font-size: 60px;
+  font-size: 200px;
+  white-space: nowrap;
     span {
       background: none repeat scroll 0 0 @klBlueMed;
-      border-radius: 3px 3px 3px 3px;
+      border-radius: 3px 0px 3px 3px;
       color: #FFFFFF;
-      font-size: 0.4em;
+      font-size: 0.5em;
       line-height: 0.5em;
-      margin: 10px 0 0 6px;
+      margin: 5px 0 0 6px;
       overflow: hidden;
-      padding: 13px 16px 8px 13px;
+      padding: 0.35em 0.5em 0.2em;
       position: relative;
       vertical-align: text-top;
       display: inline-block;
@@ -66,6 +67,6 @@
 /* logo mark padding tweak for safari/chrome only */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   .logo-mark span {
-    padding: 12px 16px 9px 13px;
+    padding: .35em .5em .3em .43em;
   }
 }
